# tastytrade-mcp

./: .coverage  .env.example  .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
examples/: mock_fixture.json  mock_fixture_bp_rejection.json  mock_fixture_mcp_outage.json  mock_fixture_stale_pending.json  mock_fixture_stop_filled.json
src/tastytrade_mcp/: __init__.py  cli.py  config.py  credentials.py  http_app.py  logging_utils.py  mocks.py  risk.py  server.py  session.py
src/tastytrade_mcp/tools/: __init__.py  _helpers.py  account.py  market.py  orders.py  status.py  strategy.py  watchlists.py
tests/: conftest.py  test_build_order.py  test_cli.py  test_credentials.py  test_http_transport.py  test_live_sandbox.py  test_logging_masking.py  test_market_greeks.py  test_meic_agent_workflow.py  test_mock_fixture_variants.py  test_mock_mode.py  test_preflight.py  test_risk.py  test_session.py  test_shutdown.py  test_tools.py  test_watchlists.py
