[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tastytrade-mcp"
version = "0.1.0"
description = "MCP server that lets autonomous AI agents connect to Tastytrade (OAuth2, keyring-stored credentials)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Jon Covington" }]
keywords = ["tastytrade", "mcp", "trading", "options", "oauth2", "agent"]

dependencies = [
    "tastytrade>=12",
    "mcp>=1.2",
    "keyring>=24",
    "rich>=13",
    "pydantic>=2",
    "starlette>=0.37",
    "uvicorn>=0.30",
    "slowapi>=0.1.9",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[project.scripts]
tastytrade-mcp = "tastytrade_mcp.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tastytrade_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
