[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tastytrade-mcp"
version = "0.1.0"
description = "MCP server that lets autonomous AI agents connect to Tastytrade (OAuth2, keyring-stored credentials)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Jon Covington" }]
keywords = ["tastytrade", "mcp", "trading", "options", "oauth2", "agent"]

dependencies = [
    "tastytrade>=12",
    "mcp>=1.2",
    "keyring>=24",
    "rich>=13",
    "pydantic>=2",
    "starlette>=0.37",
    "uvicorn>=0.30",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "httpx>=0.27",
]
# Encrypted file-based keyring backend for headless Linux (servers, Docker, CI).
# After installing, set: PYTHON_KEYRING_BACKEND=keyrings.alt.file.EncryptedKeyring
headless = ["keyrings.alt>=5"]

[project.scripts]
tastytrade-mcp = "tastytrade_mcp.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tastytrade_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "live: integration tests that hit the live Tastytrade sandbox using stored credentials (opt-in via RUN_LIVE_SANDBOX=1)",
]

[tool.coverage.run]
source = ["tastytrade_mcp"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
